# pose_estimation

./: pyproject.toml
pose/: infer.py
pose/models/: __init__.py  simdr.py
pose/utils/: boxes.py  decode.py  utils.py
